Initial support for migrating VM to a new propolis instance.
