# common/src/api/internal/nexus.rs
@@ -38,6 +38,8 @@ pub struct InstanceRuntimeState {
     pub sled_uuid: Uuid,
     /// which propolis-server is running this Instance
     pub propolis_uuid: Uuid,
+    /// address of propolis-server running this Instance
+    pub propolis_addr: Option<SocketAddr>,
     /// number of CPUs allocated for this Instance
     pub ncpus: InstanceCpuCount,
     /// memory allocated for this Instance
