# nexus/src/db/model.rs
@@ -839,6 +839,8 @@ pub struct InstanceRuntimeState {
     pub sled_uuid: Uuid,
     #[column_name = "active_propolis_id"]
     pub propolis_uuid: Uuid,
+    #[column_name = "active_propolis_ip"]
+    pub propolis_ip: Option<ipnetwork::IpNetwork>,
     #[column_name = "ncpus"]
     pub ncpus: InstanceCpuCount,
     #[column_name = "memory"]
@@ -865,6 +867,7 @@ impl From<internal::nexus::InstanceRuntimeState> for InstanceRuntimeState {
             state: InstanceState::new(state.run_state),
             sled_uuid: state.sled_uuid,
             propolis_uuid: state.propolis_uuid,
+            propolis_ip: state.propolis_addr.map(|addr| addr.ip().into()),
             ncpus: state.ncpus.into(),
             memory: state.memory.into(),
             hostname: state.hostname,
@@ -881,6 +884,10 @@ impl Into<internal::nexus::InstanceRuntimeState> for InstanceRuntimeState {
             run_state: *self.state.state(),
             sled_uuid: self.sled_uuid,
             propolis_uuid: self.propolis_uuid,
+            // TODO: use constant for propolis port
+            propolis_addr: self
+                .propolis_ip
+                .map(|ip| SocketAddr::new(ip.ip(), 12400)),
             ncpus: self.ncpus.into(),
             memory: self.memory.into(),
             hostname: self.hostname,
